@@ -58,7 +58,6 @@ import java.util.ListIterator;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Properties;
-import java.util.Queue;
 import java.util.function.BiConsumer;
 import java.util.function.BiFunction;
 import java.util.function.Consumer;
@@ -67,6 +66,8 @@ import java.util.function.Supplier;
 import java.util.jar.Attributes;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -96,7 +97,12 @@ import com.oracle.svm.util.ModuleSupport;
 
 public class NativeImage {
 
-    private static final String DEFAULT_GENERATOR_CLASS_NAME = "com.oracle.svm.hosted.NativeImageGeneratorRunner";
+    /* Used to enable native-image JPMS support (WIP) - will become default once completed */
+    static final boolean USE_NI_JPMS = System.getenv().getOrDefault("USE_NATIVE_IMAGE_JAVA_PLATFORM_MODULE_SYSTEM", "false").toLowerCase().equals("true");
+
+    private static final String DEFAULT_GENERATOR_CLASS_NAME = NativeImageGeneratorRunner.class.getName();
+    private static final String DEFAULT_GENERATOR_MODULE_NAME = ModuleSupport.getModuleName(NativeImageGeneratorRunner.class);
+
     private static final String DEFAULT_GENERATOR_9PLUS_SUFFIX = "$JDK9Plus";
     private static final String CUSTOM_SYSTEM_CLASS_LOADER = NativeImageSystemClassLoader.class.getCanonicalName();
 
@@ -109,7 +115,7 @@ public class NativeImage {
     }
 
     static final String graalvmVersion = System.getProperty("org.graalvm.version", "dev");
-    static final String graalvmConfig = System.getProperty("org.graalvm.config", "");
+    static final String graalvmConfig = System.getProperty("org.graalvm.config", "CE");
 
     private static Map<String, String[]> getCompilerFlags() {
         Map<String, String[]> result = new HashMap<>();
@@ -140,6 +146,37 @@ public class NativeImage {
 
     private static final String usageText = getResource("/Usage.txt");
 
+    class ArgumentQueue {
+
+        private final ArrayDeque<String> queue;
+        public final String argumentOrigin;
+
+        ArgumentQueue(String argumentOrigin) {
+            queue = new ArrayDeque<>();
+            this.argumentOrigin = argumentOrigin;
+        }
+
+        public void add(String arg) {
+            queue.add(arg);
+        }
+
+        public String poll() {
+            return queue.poll();
+        }
+
+        public String peek() {
+            return queue.peek();
+        }
+
+        public boolean isEmpty() {
+            return queue.isEmpty();
+        }
+
+        public int size() {
+            return queue.size();
+        }
+    }
+
     abstract static class OptionHandler<T extends NativeImage> {
         protected final T nativeImage;
 
@@ -147,7 +184,7 @@ public class NativeImage {
             this.nativeImage = nativeImage;
         }
 
-        abstract boolean consume(Queue<String> args);
+        abstract boolean consume(ArgumentQueue args);
 
         void addFallbackBuildArgs(@SuppressWarnings("unused") List<String> buildArgs) {
             /* Override to forward fallback relevant args */
@@ -160,17 +197,23 @@ public class NativeImage {
     public static final String oH = "-H:";
     static final String oR = "-R:";
 
-    final String enablePrintFlags = SubstrateOptions.PrintFlags.getName() + "=";
-    final String enablePrintFlagsWithExtraHelp = SubstrateOptions.PrintFlagsWithExtraHelp.getName() + "=";
+    final String enablePrintFlags = SubstrateOptions.PrintFlags.getName();
+    final String enablePrintFlagsWithExtraHelp = SubstrateOptions.PrintFlagsWithExtraHelp.getName();
 
     private static <T> String oH(OptionKey<T> option) {
         return oH + option.getName() + "=";
+    }
+
+    private static <T> String oH(OptionKey<T> option, String origin) {
+        VMError.guarantee(origin != null && !origin.contains("="));
+        return oH + option.getName() + "@" + origin + "=";
     }
 
     private static <T> String oR(OptionKey<T> option) {
         return oR + option.getName() + "=";
     }
 
+    final String oHModule = oH(SubstrateOptions.Module);
     final String oHClass = oH(SubstrateOptions.Class);
     final String oHName = oH(SubstrateOptions.Name);
     final String oHPath = oH(SubstrateOptions.Path);
@@ -184,15 +227,6 @@ public class NativeImage {
     final String oHTraceObjectInstantiation = oH(SubstrateOptions.TraceObjectInstantiation);
     final String oHTargetPlatform = oH(SubstrateOptions.TargetPlatform);
 
-    /* List arguments */
-    final String oHSubstitutionFiles = oH(ConfigurationFiles.Options.SubstitutionFiles);
-    final String oHReflectionConfigurationFiles = oH(ConfigurationFiles.Options.ReflectionConfigurationFiles);
-    final String oHDynamicProxyConfigurationFiles = oH(ConfigurationFiles.Options.DynamicProxyConfigurationFiles);
-    final String oHResourceConfigurationFiles = oH(ConfigurationFiles.Options.ResourceConfigurationFiles);
-    final String oHJNIConfigurationFiles = oH(ConfigurationFiles.Options.JNIConfigurationFiles);
-    final String oHSerializationConfigurationFiles = oH(ConfigurationFiles.Options.SerializationConfigurationFiles);
-    final String oHSerializationDenyConfigurationFiles = oH(ConfigurationFiles.Options.SerializationDenyConfigurationFiles);
-
     final String oHInspectServerContentPath = oH(PointstoOptions.InspectServerContentPath);
     final String oHDeadlockWatchdogInterval = oH(SubstrateOptions.DeadlockWatchdogInterval);
 
@@ -201,15 +235,16 @@ public class NativeImage {
 
     private static final String pKeyNativeImageArgs = "NativeImageArgs";
 
-    private final LinkedHashSet<String> imageBuilderArgs = new LinkedHashSet<>();
+    private final ArrayList<String> imageBuilderArgs = new ArrayList<>();
     private final LinkedHashSet<Path> imageBuilderClasspath = new LinkedHashSet<>();
     private final LinkedHashSet<Path> imageBuilderBootClasspath = new LinkedHashSet<>();
     private final LinkedHashSet<String> imageIncludeBuiltinModules = new LinkedHashSet<>();
     private final ArrayList<String> imageBuilderJavaArgs = new ArrayList<>();
     private final LinkedHashSet<Path> imageClasspath = new LinkedHashSet<>();
     private final LinkedHashSet<Path> imageProvidedClasspath = new LinkedHashSet<>();
+    private final LinkedHashSet<Path> imageModulePath = new LinkedHashSet<>();
     private final ArrayList<String> customJavaArgs = new ArrayList<>();
-    private final LinkedHashSet<String> customImageBuilderArgs = new LinkedHashSet<>();
+    private final ArrayList<String> customImageBuilderArgs = new ArrayList<>();
     private final LinkedHashSet<Path> customImageClasspath = new LinkedHashSet<>();
     private final ArrayList<OptionHandler<? extends NativeImage>> optionHandlers = new ArrayList<>();
 
@@ -226,6 +261,8 @@ public class NativeImage {
 
     final Registry optionRegistry;
     private LinkedHashSet<EnabledOption> enabledLanguages;
+
+    private final List<ExcludeConfig> excludedConfigs = new ArrayList<>();
 
     public static final String nativeImagePropertiesFilename = "native-image.properties";
     public static final String nativeImageMetaInf = "META-INF/native-image";
@@ -303,6 +340,13 @@ public class NativeImage {
         }
 
         /**
+         * @return base image module-path needed for every image (e.g. LIBRARY_SUPPORT)
+         */
+        default List<Path> getImageProvidedModulePath() {
+            throw VMError.unimplemented();
+        }
+
+        /**
          * @return JVMCI API classpath for image builder (jvmci + graal jars)
          */
         default List<Path> getBuilderJVMCIClasspath() {
@@ -330,10 +374,16 @@ public class NativeImage {
             String javaVersion = String.valueOf(JavaVersionUtil.JAVA_SPEC);
             String[] flagsForVersion = graalCompilerFlags.get(javaVersion);
             if (flagsForVersion == null) {
-                showError(String.format("Image building not supported for Java version %s in %s with VM configuration \"%s\"",
+                String suffix = "";
+                if (System.getProperty("java.home").contains("-dev")) {
+                    suffix = " Update SubstrateCompilerFlagsBuilder.compute_graal_compiler_flags_map() in " +
+                                    "mx_substratevm.py to add a configuration for a new Java version.";
+                }
+                showError(String.format("Image building not supported for Java version %s in %s with VM configuration \"%s\".%s",
                                 System.getProperty("java.version"),
                                 System.getProperty("java.home"),
-                                System.getProperty("java.vm.name")));
+                                System.getProperty("java.vm.name"),
+                                suffix));
             }
 
             if (useJVMCINativeLibrary == null) {
@@ -424,12 +474,12 @@ public class NativeImage {
         }
     }
 
-    private static class DefaultBuildConfiguration implements BuildConfiguration {
-        private final Path workDir;
-        private final Path rootDir;
-        private final List<String> args;
+    protected static class DefaultBuildConfiguration implements BuildConfiguration {
+        protected final Path workDir;
+        protected final Path rootDir;
+        protected final List<String> args;
 
-        DefaultBuildConfiguration(List<String> args) {
+        protected DefaultBuildConfiguration(List<String> args) {
             this(null, null, args);
         }
 
@@ -496,6 +546,9 @@ public class NativeImage {
 
         @Override
         public List<Path> getBuilderClasspath() {
+            if (USE_NI_JPMS) {
+                return Collections.emptyList();
+            }
             List<Path> result = new ArrayList<>();
             if (useJavaModules()) {
                 result.addAll(getJars(rootDir.resolve(Paths.get("lib", "jvmci")), "graal-sdk", "graal", "enterprise-graal"));
@@ -512,6 +565,14 @@ public class NativeImage {
         @Override
         public List<Path> getImageProvidedClasspath() {
             return getJars(rootDir.resolve(Paths.get("lib", "svm")));
+        }
+
+        @Override
+        public List<Path> getImageProvidedModulePath() {
+            if (USE_NI_JPMS) {
+                return getJars(rootDir.resolve(Paths.get("lib", "svm")));
+            }
+            return Collections.emptyList();
         }
 
         @Override
@@ -543,8 +604,12 @@ public class NativeImage {
         @Override
         public List<Path> getBuilderModulePath() {
             List<Path> result = new ArrayList<>();
-            result.addAll(getJars(rootDir.resolve(Paths.get("lib", "jvmci")), "graal-sdk", "enterprise-graal"));
-            result.addAll(getJars(rootDir.resolve(Paths.get("lib", "truffle")), "truffle-api"));
+            if (USE_NI_JPMS) {
+                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
+            } else {
+                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "jvmci")), "graal-sdk", "enterprise-graal"));
+                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "truffle")), "truffle-api"));
+            }
             return result;
         }
 
@@ -605,11 +670,29 @@ public class NativeImage {
         }
 
         buildArgs.add(oH + "+" + SubstrateOptions.ParseRuntimeOptions.getName());
+        Path imagePathPath;
+        try {
+            imagePathPath = canonicalize(Paths.get(imagePath));
+        } catch (NativeImage.NativeImageError | InvalidPathException e) {
+            throw showError("The given " + oHPath + imagePath + " argument does not specify a valid path", e);
+        }
+        boolean[] isPortable = {true};
         String classpathString = imageClasspath.stream()
-                        .map(imagePath::relativize)
+                        .map(path -> {
+                            try {
+                                return imagePathPath.relativize(path);
+                            } catch (IllegalArgumentException e) {
+                                isPortable[0] = false;
+                                return path;
+                            }
+                        })
                         .map(ClasspathUtils::classpathToString)
                         .collect(Collectors.joining(File.pathSeparator));
-        buildArgs.add(oHPath + imagePath.toString());
+        if (!isPortable[0]) {
+            showWarning("The produced fallback image will not be portable, because not all classpath entries" +
+                            " could be relativized (e.g., they are on another drive).");
+        }
+        buildArgs.add(oHPath + imagePathPath.toString());
         buildArgs.add(oH(FallbackExecutor.Options.FallbackExecutorClasspath) + classpathString);
         buildArgs.add(oH(FallbackExecutor.Options.FallbackExecutorMainClass) + mainClass);
 
@@ -726,7 +809,10 @@ public class NativeImage {
         config.getBuilderJavaArgs().forEach(this::addImageBuilderJavaArgs);
         addImageBuilderJavaArgs("-Xss10m");
         addImageBuilderJavaArgs(oXms + getXmsValue());
-        addImageBuilderJavaArgs(oXmx + getXmxValue(1));
+        String xmxVal = getXmxValue(1);
+        if (!"0".equals(xmxVal)) {
+            addImageBuilderJavaArgs(oXmx + xmxVal);
+        }
         addImageBuilderJavaArgs("-Duser.country=US", "-Duser.language=en");
         /* Prevent JVM that runs the image builder to steal focus */
         if (OS.getCurrent() != OS.WINDOWS || JavaVersionUtil.JAVA_SPEC > 8) {
@@ -805,11 +891,6 @@ public class NativeImage {
 
         consolidateListArgs(imageBuilderJavaArgs, "-Dpolyglot.engine.PreinitializeContexts=", ",", Function.identity()); // legacy
         consolidateListArgs(imageBuilderJavaArgs, "-Dpolyglot.image-build-time.PreinitializeContexts=", ",", Function.identity());
-    }
-
-    protected static String consolidateSingleValueArg(Collection<String> args, String argPrefix) {
-        BiFunction<String, String, String> takeLast = (a, b) -> b;
-        return consolidateArgs(args, argPrefix, Function.identity(), Function.identity(), () -> null, takeLast);
     }
 
     protected static boolean replaceArg(Collection<String> args, String argPrefix, String argSuffix) {
@@ -900,7 +981,7 @@ public class NativeImage {
                     } catch (NoSuchFileException e) {
                         /* Fallthrough */
                     }
-                } else if (Files.isReadable(classpathEntry)) {
+                } else if (ClasspathUtils.isJar(classpathEntry)) {
                     jarFileMatches = Collections.singletonList(classpathEntry);
                 }
 
@@ -935,6 +1016,11 @@ public class NativeImage {
                                 .filter(p -> p.endsWith(fileType.fileName))
                                 .collect(Collectors.toList());
                 for (Path nativeImageMetaInfFile : nativeImageMetaInfFiles) {
+                    boolean excluded = isExcluded(nativeImageMetaInfFile, classpathEntry);
+                    if (excluded) {
+                        continue;
+                    }
+
                     Path resourceRoot = nativeImageMetaInfBase.getParent().getParent();
                     Function<String, String> resolver = str -> {
                         Path componentDirectory = resourceRoot.relativize(nativeImageMetaInfFile).getParent();
@@ -957,15 +1043,47 @@ public class NativeImage {
         }
     }
 
+    public void addExcludeConfig(Pattern jarPattern, Pattern resourcePattern) {
+        excludedConfigs.add(new ExcludeConfig(jarPattern, resourcePattern));
+    }
+
+    private boolean isExcluded(Path resourcePath, Path classpathEntry) {
+        return excludedConfigs.stream()
+                        .filter(e -> e.jarPattern.matcher(classpathEntry.toString()).find())
+                        .anyMatch(e -> e.resourcePattern.matcher(resourcePath.toString()).find());
+    }
+
+    static String injectHostedOptionOrigin(String option, String origin) {
+        if (origin != null && option.startsWith(oH)) {
+            String optionOriginSeparator = "@";
+            int eqIndex = option.indexOf('=');
+            char boolPrefix = option.length() > oH.length() ? option.charAt(oH.length()) : 0;
+            if (boolPrefix == '-' || boolPrefix == '+') {
+                if (eqIndex != -1) {
+                    showError("Invalid boolean native-image hosted-option " + option + " at " + origin);
+                }
+                return option + optionOriginSeparator + origin;
+            } else {
+                if (eqIndex == -1) {
+                    showError("Invalid native-image hosted-option " + option + " at " + origin);
+                }
+                String front = option.substring(0, eqIndex);
+                String back = option.substring(eqIndex);
+                return front + optionOriginSeparator + origin + back;
+            }
+        }
+        return option;
+    }
+
     private void processNativeImageMetaInf(@SuppressWarnings("unused") Path classpathEntry, Path resourceRoot,
                     Path resourcePath, MetaInfFileType resourceType, Function<String, String> resolver) throws IOException {
 
-        NativeImageArgsProcessor args = new NativeImageArgsProcessor();
+        NativeImageArgsProcessor args = new NativeImageArgsProcessor(resourcePath.toUri().toString());
         if (resourceType == MetaInfFileType.Properties) {
             Map<String, String> properties = loadProperties(Files.newInputStream(resourcePath));
             String imageNameValue = properties.get("ImageName");
             if (imageNameValue != null) {
-                addCustomImageBuilderArgs(oHName + resolver.apply(imageNameValue));
+                addCustomImageBuilderArgs(injectHostedOptionOrigin(oHName + resolver.apply(imageNameValue), resourcePath.toUri().toString()));
             }
             forEachPropertyValue(properties.get("JavaArgs"), this::addImageBuilderJavaArgs, resolver);
             forEachPropertyValue(properties.get("Args"), args, resolver);
@@ -987,7 +1105,7 @@ public class NativeImage {
             } catch (IOException e) {
                 throw NativeImage.showError("Error while expanding wildcard for '" + path + "'", e);
             }
-        } else if (!Files.isDirectory(path)) {
+        } else if (ClasspathUtils.isJar(path)) {
             processJarManifestMainAttributes(path, manifestConsumer);
         }
     }
@@ -1010,7 +1128,8 @@ public class NativeImage {
         if (mainClassValue == null) {
             NativeImage.showError("No main manifest attribute, in " + jarFilePath);
         }
-        addPlainImageBuilderArg(oHClass + mainClassValue);
+        String origin = "manifest from " + jarFilePath.toUri();
+        addPlainImageBuilderArg(NativeImage.injectHostedOptionOrigin(oHClass + mainClassValue, origin));
         String jarFileName = jarFilePath.getFileName().toString();
         String jarSuffix = ".jar";
         String jarFileNameBase;
@@ -1020,7 +1139,7 @@ public class NativeImage {
             jarFileNameBase = jarFileName;
         }
         if (!jarFileNameBase.isEmpty()) {
-            addPlainImageBuilderArg(oHName + jarFileNameBase);
+            addPlainImageBuilderArg(NativeImage.injectHostedOptionOrigin(oHName + jarFileNameBase, origin));
         }
     }
 
@@ -1053,24 +1172,17 @@ public class NativeImage {
         addPlainImageBuilderArg(clibrariesBuilderArg);
 
         if (printFlagsOptionQuery != null) {
-            addPlainImageBuilderArg(NativeImage.oH + enablePrintFlags + printFlagsOptionQuery);
-            addPlainImageBuilderArg(NativeImage.oR + enablePrintFlags + printFlagsOptionQuery);
+            addPlainImageBuilderArg(NativeImage.oH + enablePrintFlags + "=" + printFlagsOptionQuery);
+            addPlainImageBuilderArg(NativeImage.oR + enablePrintFlags + "=" + printFlagsOptionQuery);
         } else if (printFlagsWithExtraHelpOptionQuery != null) {
-            addPlainImageBuilderArg(NativeImage.oH + enablePrintFlagsWithExtraHelp + printFlagsWithExtraHelpOptionQuery);
-            addPlainImageBuilderArg(NativeImage.oR + enablePrintFlagsWithExtraHelp + printFlagsWithExtraHelpOptionQuery);
+            addPlainImageBuilderArg(NativeImage.oH + enablePrintFlagsWithExtraHelp + "=" + printFlagsWithExtraHelpOptionQuery);
+            addPlainImageBuilderArg(NativeImage.oR + enablePrintFlagsWithExtraHelp + "=" + printFlagsWithExtraHelpOptionQuery);
         }
 
         if (shouldAddCWDToCP()) {
             addImageClasspath(Paths.get("."));
         }
         imageClasspath.addAll(customImageClasspath);
-
-        /* Perform JavaArgs consolidation - take the maximum of -Xmx, minimum of -Xms */
-        Long xmxValue = consolidateArgs(imageBuilderJavaArgs, oXmx, SubstrateOptionsParser::parseLong, String::valueOf, () -> 0L, Math::max);
-        Long xmsValue = consolidateArgs(imageBuilderJavaArgs, oXms, SubstrateOptionsParser::parseLong, String::valueOf, () -> SubstrateOptionsParser.parseLong(getXmsValue()), Math::max);
-        if (Long.compareUnsigned(xmsValue, xmxValue) > 0) {
-            replaceArg(imageBuilderJavaArgs, oXms, Long.toUnsignedString(xmxValue));
-        }
 
         imageBuilderJavaArgs.add("-Djdk.internal.lambda.disableEagerInitialization=true");
         // The following two are for backwards compatibility reasons. They should be removed.
@@ -1094,32 +1206,21 @@ public class NativeImage {
             }
         }
         addImageBuilderJavaArgs(customJavaArgs.toArray(new String[0]));
+        /* Perform JavaArgs consolidation - take the maximum of -Xmx, minimum of -Xms */
+        Long xmxValue = consolidateArgs(imageBuilderJavaArgs, oXmx, SubstrateOptionsParser::parseLong, String::valueOf, () -> 0L, Math::max);
+        Long xmsValue = consolidateArgs(imageBuilderJavaArgs, oXms, SubstrateOptionsParser::parseLong, String::valueOf, () -> SubstrateOptionsParser.parseLong(getXmsValue()), Math::max);
+        if (xmxValue != null) {
+            if (Long.compareUnsigned(xmsValue, xmxValue) > 0) {
+                replaceArg(imageBuilderJavaArgs, oXms, Long.toUnsignedString(xmxValue));
+            }
+        }
 
         /* Perform option consolidation of imageBuilderArgs */
-        Function<String, String> canonicalizedPathStr = s -> canonicalize(Paths.get(s)).toString();
-        consolidateListArgs(imageBuilderArgs, oHCLibraryPath, ",", canonicalizedPathStr);
-        consolidateListArgs(imageBuilderArgs, oHSubstitutionFiles, ",", canonicalizedPathStr);
-        consolidateListArgs(imageBuilderArgs, oHReflectionConfigurationFiles, ",", canonicalizedPathStr);
-        consolidateListArgs(imageBuilderArgs, oHDynamicProxyConfigurationFiles, ",", canonicalizedPathStr);
-        consolidateListArgs(imageBuilderArgs, oHResourceConfigurationFiles, ",", canonicalizedPathStr);
-        consolidateListArgs(imageBuilderArgs, oHJNIConfigurationFiles, ",", canonicalizedPathStr);
-        consolidateListArgs(imageBuilderArgs, oHTraceClassInitialization, ",", Function.identity());
-        consolidateListArgs(imageBuilderArgs, oHTraceObjectInstantiation, ",", Function.identity());
-        consolidateListArgs(imageBuilderArgs, oHSerializationConfigurationFiles, ",", canonicalizedPathStr);
-        consolidateListArgs(imageBuilderArgs, oHSerializationDenyConfigurationFiles, ",", canonicalizedPathStr);
 
         imageBuilderJavaArgs.addAll(getAgentArguments());
 
-        BiFunction<String, String, String> takeLast = (a, b) -> b;
-        String imagePathStr = consolidateArgs(imageBuilderArgs, oHPath, Function.identity(), canonicalizedPathStr, () -> null, takeLast);
-        try {
-            imagePath = canonicalize(Paths.get(imagePathStr));
-        } catch (NativeImage.NativeImageError | InvalidPathException e) {
-            throw showError("The given " + oHPath + imagePathStr + " argument does not specify a valid path", e);
-        }
-
-        consolidateArgs(imageBuilderArgs, oHName, Function.identity(), Function.identity(), () -> null, takeLast);
-        mainClass = consolidateSingleValueArg(imageBuilderArgs, oHClass);
+        mainClass = getHostedOptionFinalArgumentValue(imageBuilderArgs, oHClass);
+        imagePath = getHostedOptionFinalArgumentValue(imageBuilderArgs, oHPath);
         boolean buildExecutable = imageBuilderArgs.stream().noneMatch(arg -> arg.contains(enableSharedLibraryFlag));
         boolean printFlags = imageBuilderArgs.stream().anyMatch(arg -> arg.contains(enablePrintFlags) || arg.contains(enablePrintFlagsWithExtraHelp));
 
@@ -1136,39 +1237,46 @@ public class NativeImage {
 
             if (!jarOptionMode) {
                 /* Main-class from customImageBuilderArgs counts as explicitMainClass */
-                boolean explicitMainClass = customImageBuilderArgs.stream().anyMatch(arg -> arg.startsWith(oHClass));
+                boolean explicitMainClass = getHostedOptionFinalArgumentValue(customImageBuilderArgs, oHClass) != null;
+                String mainClassModule = getHostedOptionFinalArgumentValue(imageBuilderArgs, oHModule);
 
+                boolean hasMainClassModule = mainClassModule != null && !mainClassModule.isEmpty();
+                boolean hasMainClass = mainClass != null && !mainClass.isEmpty();
                 if (extraImageArgs.isEmpty()) {
-                    if (buildExecutable && (mainClass == null || mainClass.isEmpty())) {
-                        showError("Please specify class containing the main entry point method. (see --help)");
+                    if (buildExecutable && !hasMainClassModule && !hasMainClass) {
+                        String moduleMsg = USE_NI_JPMS ? " (or <module>/<mainclass>)" : "";
+                        showError("Please specify class" + moduleMsg + " containing the main entry point method. (see --help)");
                     }
                 } else {
                     /* extraImageArgs main-class overrules previous main-class specification */
                     explicitMainClass = true;
                     mainClass = extraImageArgs.remove(0);
-                    replaceArg(imageBuilderArgs, oHClass, mainClass);
+                    imageBuilderArgs.add(oH(SubstrateOptions.Class, "explicit main-class") + mainClass);
                 }
 
                 if (extraImageArgs.isEmpty()) {
                     /* No explicit image name, define image name by other means */
-                    if (customImageBuilderArgs.stream().noneMatch(arg -> arg.startsWith(oHName))) {
+                    if (getHostedOptionFinalArgumentValue(customImageBuilderArgs, oHName) == null) {
                         /* Also no explicit image name given as customImageBuilderArgs */
                         if (explicitMainClass) {
-                            /* Use main-class lower case as image name */
-                            replaceArg(imageBuilderArgs, oHName, mainClass.toLowerCase());
-                        } else if (imageBuilderArgs.stream().noneMatch(arg -> arg.startsWith(oHName))) {
-                            /* Although very unlikely, report missing image-name if needed. */
-                            throw showError("Missing image-name. Use " + oHName + "<imagename> to provide one.");
+                            imageBuilderArgs.add(oH(SubstrateOptions.Name, "main-class lower case as image name") + mainClass.toLowerCase());
+                        } else if (getHostedOptionFinalArgumentValue(imageBuilderArgs, oHName) == null) {
+                            if (hasMainClassModule) {
+                                imageBuilderArgs.add(oH(SubstrateOptions.Name, "image-name from module-name") + mainClassModule.toLowerCase());
+                            } else {
+                                /* Although very unlikely, report missing image-name if needed. */
+                                throw showError("Missing image-name. Use " + oHName + "<imagename> to provide one.");
+                            }
                         }
                     }
                 } else {
                     /* extraImageArgs executable name overrules previous specification */
-                    replaceArg(imageBuilderArgs, oHName, extraImageArgs.remove(0));
+                    imageBuilderArgs.add(oH(SubstrateOptions.Name, "explicit image name") + extraImageArgs.remove(0));
                 }
             } else {
                 if (!extraImageArgs.isEmpty()) {
                     /* extraImageArgs library name overrules previous specification */
-                    replaceArg(imageBuilderArgs, oHName, extraImageArgs.remove(0));
+                    imageBuilderArgs.add(oH(SubstrateOptions.Name, "explicit image name") + extraImageArgs.remove(0));
                 }
             }
 
@@ -1178,7 +1286,7 @@ public class NativeImage {
             }
         }
 
-        imageName = consolidateSingleValueArg(imageBuilderArgs, oHName);
+        imageName = getHostedOptionFinalArgumentValue(imageBuilderArgs, oHName);
 
         if (!leftoverArgs.isEmpty()) {
             String prefix = "Unrecognized option" + (leftoverArgs.size() == 1 ? ": " : "s: ");
@@ -1186,14 +1294,39 @@ public class NativeImage {
         }
 
         LinkedHashSet<Path> finalImageClasspath = new LinkedHashSet<>(imageBuilderBootClasspath);
-        finalImageClasspath.addAll(imageProvidedClasspath);
         finalImageClasspath.addAll(imageClasspath);
+        if (!finalImageClasspath.isEmpty()) {
+            finalImageClasspath.addAll(imageProvidedClasspath);
+        }
+
+        LinkedHashSet<Path> finalImageModulePath = new LinkedHashSet<>(imageModulePath);
+        if (!finalImageModulePath.isEmpty()) {
+            finalImageModulePath.addAll(config.getImageProvidedModulePath());
+        }
 
         if (!config.buildFallbackImage() && imageBuilderArgs.contains(oHFallbackThreshold + SubstrateOptions.ForceFallback)) {
             /* Bypass regular build and proceed with fallback image building */
             return 2;
         }
-        return buildImage(imageBuilderJavaArgs, imageBuilderBootClasspath, imageBuilderClasspath, imageBuilderArgs, finalImageClasspath);
+        return buildImage(imageBuilderJavaArgs, imageBuilderBootClasspath, imageBuilderClasspath, imageBuilderArgs, finalImageClasspath, finalImageModulePath);
+    }
+
+    private static String getLocationAgnosticArgPrefix(String argPrefix) {
+        VMError.guarantee(argPrefix.startsWith(oH) && argPrefix.endsWith("="), "argPrefix has to be a hosted option that ends with \"=\"");
+        return "^" + argPrefix.substring(0, argPrefix.length() - 1) + "(@[^=]*)?" + argPrefix.substring(argPrefix.length() - 1);
+    }
+
+    protected static String getHostedOptionFinalArgumentValue(List<String> args, String argPrefix) {
+        String locationAgnosticArgPrefix = getLocationAgnosticArgPrefix(argPrefix);
+        Pattern pattern = Pattern.compile(locationAgnosticArgPrefix);
+        String lastArg = null;
+        for (String arg : args) {
+            Matcher matcher = pattern.matcher(arg);
+            if (matcher.find()) {
+                lastArg = arg.substring(matcher.group().length());
+            }
+        }
+        return lastArg;
     }
 
     private boolean shouldAddCWDToCP() {
@@ -1208,7 +1341,7 @@ public class NativeImage {
         }
 
         /* If no customImageClasspath was specified put "." on classpath */
-        return customImageClasspath.isEmpty();
+        return customImageClasspath.isEmpty() && imageModulePath.isEmpty();
     }
 
     private static boolean isListArgumentSet(Collection<String> list, String argPrefix) {
@@ -1295,12 +1428,18 @@ public class NativeImage {
 
     private String mainClass;
     private String imageName;
-    private Path imagePath;
+    private String imagePath;
 
-    protected static List<String> createImageBuilderArgs(LinkedHashSet<String> imageArgs, LinkedHashSet<Path> imagecp) {
+    protected static List<String> createImageBuilderArgs(ArrayList<String> imageArgs, LinkedHashSet<Path> imagecp, LinkedHashSet<Path> imagemp) {
         List<String> result = new ArrayList<>();
-        result.add(SubstrateOptions.IMAGE_CLASSPATH_PREFIX);
-        result.add(imagecp.stream().map(ClasspathUtils::classpathToString).collect(Collectors.joining(File.pathSeparator)));
+        if (!imagecp.isEmpty()) {
+            result.add(SubstrateOptions.IMAGE_CLASSPATH_PREFIX);
+            result.add(imagecp.stream().map(ClasspathUtils::classpathToString).collect(Collectors.joining(File.pathSeparator)));
+        }
+        if (!imagemp.isEmpty()) {
+            result.add(SubstrateOptions.IMAGE_MODULEPATH_PREFIX);
+            result.add(imagemp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator)));
+        }
         result.addAll(imageArgs);
         return result;
     }
@@ -1326,7 +1465,7 @@ public class NativeImage {
         }
     }
 
-    protected int buildImage(List<String> javaArgs, LinkedHashSet<Path> bcp, LinkedHashSet<Path> cp, LinkedHashSet<String> imageArgs, LinkedHashSet<Path> imagecp) {
+    protected int buildImage(List<String> javaArgs, LinkedHashSet<Path> bcp, LinkedHashSet<Path> cp, ArrayList<String> imageArgs, LinkedHashSet<Path> imagecp, LinkedHashSet<Path> imagemp) {
         /* Construct ProcessBuilder command from final arguments */
         List<String> command = new ArrayList<>();
         command.add(canonicalize(config.getJavaExecutable()).toString());
@@ -1335,8 +1474,14 @@ public class NativeImage {
             command.add(bcp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator, "-Xbootclasspath/a:", "")));
         }
 
-        command.addAll(Arrays.asList("-cp", cp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator))));
-        command.add(config.getGeneratorMainClass());
+        if (!cp.isEmpty()) {
+            command.addAll(Arrays.asList("-cp", cp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator))));
+        }
+        if (USE_NI_JPMS) {
+            command.addAll(Arrays.asList("--module", DEFAULT_GENERATOR_MODULE_NAME + "/" + DEFAULT_GENERATOR_CLASS_NAME));
+        } else {
+            command.add(config.getGeneratorMainClass());
+        }
         if (IS_AOT && OS.getCurrent().hasProcFS) {
             /*
              * GR-8254: Ensure image-building VM shuts down even if native-image dies unexpected
@@ -1344,7 +1489,7 @@ public class NativeImage {
              */
             command.addAll(Arrays.asList(SubstrateOptions.WATCHPID_PREFIX, "" + ProcessProperties.getProcessID()));
         }
-        List<String> finalImageBuilderArgs = createImageBuilderArgs(imageArgs, imagecp);
+        List<String> finalImageBuilderArgs = createImageBuilderArgs(imageArgs, imagecp, imagemp);
         List<String> completeCommandList = Stream.concat(command.stream(), finalImageBuilderArgs.stream()).collect(Collectors.toList());
         command.add(createImageBuilderArgumentFile(finalImageBuilderArgs));
 
@@ -1400,7 +1545,7 @@ public class NativeImage {
         System.exit(0);
     }
 
-    private static void build(BuildConfiguration config, Function<BuildConfiguration, NativeImage> nativeImageProvider) {
+    protected static void build(BuildConfiguration config, Function<BuildConfiguration, NativeImage> nativeImageProvider) {
         NativeImage nativeImage = nativeImageProvider.apply(config);
         if (config.getBuildArgs().isEmpty()) {
             nativeImage.showMessage(usageText);
@@ -1479,7 +1624,11 @@ public class NativeImage {
     }
 
     class NativeImageArgsProcessor implements Consumer<String> {
-        Queue<String> args = new ArrayDeque<>();
+        private final ArgumentQueue args;
+
+        NativeImageArgsProcessor(String argumentOrigin) {
+            args = new ArgumentQueue(argumentOrigin);
+        }
 
         @Override
         public void accept(String arg) {
@@ -1513,7 +1662,6 @@ public class NativeImage {
 
     void addPlainImageBuilderArg(String plainArg) {
         assert plainArg.startsWith(NativeImage.oH) || plainArg.startsWith(NativeImage.oR);
-        imageBuilderArgs.remove(plainArg);
         imageBuilderArgs.add(plainArg);
     }
 
@@ -1536,6 +1684,17 @@ public class NativeImage {
      */
     void addImageClasspath(Path classpath) {
         addImageClasspathEntry(imageClasspath, classpath, true);
+    }
+
+    /**
+     * For adding classpath elements that are automatically put on the image-classpath.
+     */
+    void addImageModulePath(Path mpEntry) {
+        if (!imageModulePath.contains(mpEntry)) {
+            imageModulePath.add(mpEntry);
+            /* TODO Also collect native-image properties from modules */
+            /* processClasspathNativeImageMetaInf(mpEntry); */
+        }
     }
 
     /**
@@ -1703,7 +1862,7 @@ public class NativeImage {
     }
 
     private List<String> processNativeImageArgs() {
-        NativeImageArgsProcessor argsProcessor = new NativeImageArgsProcessor();
+        NativeImageArgsProcessor argsProcessor = new NativeImageArgsProcessor(null);
         String defaultNativeImageArgs = getUserConfigProperties().get(pKeyNativeImageArgs);
         if (defaultNativeImageArgs != null && !defaultNativeImageArgs.isEmpty()) {
             for (String defaultArg : defaultNativeImageArgs.split(" ")) {
@@ -1835,27 +1994,13 @@ public class NativeImage {
         }
     }
 
-    /**
-     * Command line entry point when running on JDK9+. This is required to dynamically export Graal
-     * to SVM and it requires {@code --add-exports=java.base/jdk.internal.module=ALL-UNNAMED} to be
-     * on the VM command line.
-     *
-     * Note: This is a workaround until GR-16855 is resolved.
-     */
-    public static class JDK9Plus {
+    private static final class ExcludeConfig {
+        final Pattern jarPattern;
+        final Pattern resourcePattern;
 
-        // Must be distinct from NativeImage.IS_AOT since the module
-        // exporting must be executed prior to NativeImage being loaded.
-        private static final boolean IS_AOT = Boolean.getBoolean("com.oracle.graalvm.isaot");
-
-        public static void main(String[] args) {
-            if (!IS_AOT) {
-                ModuleSupport.exportAndOpenAllPackagesToUnnamed("jdk.internal.vm.compiler", false);
-                ModuleSupport.exportAndOpenAllPackagesToUnnamed("jdk.internal.vm.compiler.management", true);
-                ModuleSupport.exportAndOpenAllPackagesToUnnamed("com.oracle.graal.graal_enterprise", true);
-                ModuleSupport.exportAndOpenAllPackagesToUnnamed("java.xml", false);
-            }
-            NativeImage.main(args);
+        private ExcludeConfig(Pattern jarPattern, Pattern resourcePattern) {
+            this.jarPattern = jarPattern;
+            this.resourcePattern = resourcePattern;
         }
     }
 }
